--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-spring": "^9.7.3",
     "react-toastify": "^10.0.5",
     "slick-carousel": "^1.8.1",
+    "styled-components": "^6.1.11",
     "tailwind-merge": "^2.3.0",
     "web-vitals": "^2.1.4"
   },
