--- a/package.json
+++ b/package.json
@@ -13,13 +13,15 @@
     "axios": "^1.7.2",
     "clsx": "^2.1.1",
     "express": "^4.19.2",
-    "framer-motion": "^11.2.12",
+    "formik": "^2.4.6",
+    "framer-motion": "^11.3.1",
     "mongoose": "^8.4.5",
     "nodemailer": "^6.9.14",
     "react": "^18.3.1",
     "react-countup": "^6.5.3",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
+    "react-intersection-observer": "^9.12.0",
     "react-router-dom": "^6.24.1",
     "react-scripts": "5.0.1",
     "react-slick": "^0.30.2",
@@ -28,7 +30,8 @@
     "slick-carousel": "^1.8.1",
     "styled-components": "^6.1.11",
     "tailwind-merge": "^2.3.0",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "yup": "^1.4.0"
   },
   "scripts": {
     "start": "react-scripts start",
